# qcbor

./: README
client/: CMakeLists.txt  main.c  main_og.c  tags
client/include/: telemetry_codec.h
client/src/: telemetry_codec.c
hd_eg/: .address2.pb-c.c.swp  .address2.pb-c.h.swp  .main.c.swp  address.pb-c.c  address.pb-c.h  address.proto  address2.pb-c.c  address2.pb-c.h  address2.proto  compile.sh  main.c  out
